# test-django-function

./: .gitignore  README.md  locustfile.py  main.py  pyproject.toml
config/: settings.py  urls.py
posts/: models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py
utils/: database_wrapper.py
utils/database_wrapper/: base.py
