[project]
name = "searchvectortest"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1.7",
    "django-db-geventpool>=4.0.8",
    "djangorestframework>=3.15.2",
    "drf-spectacular>=0.28.0",
    "psycopg[binary,pool]>=3.2.6",
]

[dependency-groups]
dev = [
    "locust>=2.33.1",
]
